--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="alain-default__aside-inner">
-  <nz-dropdown nzTrigger="click" class="alain-default__aside-user">
+  <!-- <nz-dropdown nzTrigger="click" class="alain-default__aside-user">
     <div nz-dropdown class="user-block-dropdown">
       <nz-avatar class="alain-default__aside-user-avatar" [nzSrc]="settings.user.avatar"></nz-avatar>
       <div class="alain-default__aside-user-info">
@@ -12,5 +12,50 @@
       <li nz-menu-item routerLink="/pro/account/settings">个人设置</li>
     </ul>
   </nz-dropdown>
-  <sidebar-nav class="d-block py-lg"></sidebar-nav>
+  <sidebar-nav class="d-block py-lg"></sidebar-nav> -->
+  <div>
+    <!-- <button nz-button [nzType]="'primary'" (click)="toggleCollapsed()" style="margin-bottom: 10px;">
+      <i nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'"></i>
+    </button> -->
+    <ul nz-menu [nzMode]="'inline'" nzTheme='dark' [nzInlineCollapsed]="isCollapsed">
+      <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? 'Navigation One' : ''">
+        <span title>
+          <i nz-icon type="mail"></i>
+          <span>Navigation One</span>
+        </span>
+      </li>
+      <li nz-submenu>
+        <span title>
+          <i nz-icon type="appstore"></i>
+          <span>Navigation Two</span>
+        </span>
+        <ul>
+          <li nz-menu-item>Option 5</li>
+          <li nz-menu-item>Option 6</li>
+          <li nz-submenu>
+            <span title>Submenu</span>
+            <ul>
+              <li nz-menu-item>
+                <ul>
+                  <li nz-menu-item>Option 7</li>
+                  <li nz-menu-item>Option 8</li>
+                </ul>
+              </li>
+              <li nz-menu-item>Option 8</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li nz-submenu>
+        <span title>
+          <i nz-icon type="setting"></i>
+          <span>Navigation Three</span>
+        </span>
+        <ul>
+          <li nz-menu-item>Option 9</li>
+          <li nz-menu-item>Option 10</li>
+          <li nz-menu-item>Option 11</li>
+        </ul>
+      </li>
+    </ul>
 </div>
