--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -1,6 +1,11 @@
 <div class="alain-default__content-title">
-  <h1>
-    Page Name
-    <small>Welcome !</small>
-  </h1>
+  <div class="card-container">
+    <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'">
+      <nz-tab *ngFor="let tab of tabs" [nzTitle]="'Tab Title ' + tab">
+        <p>Content of Tab Pane {{ tab }}</p>
+        <p>Content of Tab Pane {{ tab }}</p>
+        <p>Content of Tab Pane {{ tab }}</p>
+      </nz-tab>
+    </nz-tabset>
+  </div>
 </div>
