--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,14 +1,15 @@
 // 可以通过 https://ng-alain.github.io/ng-alain/ 获取主题参数代码
 // The theme paraments can be generated at https://ng-alain.github.io/ng-alain/
 @primary-color: #1890ff;
-@alain-default-header-bg: #000000;
-@alain-default-aside-wd: 300px;
+@alain-default-header-hg: 40px;
+@alain-default-header-bg: #37383a;
+@alain-default-aside-wd: 200px;
 @alain-default-header-padding: 0px;
-@alain-default-aside-bg: #001529;
+@alain-default-aside-bg: #37383a;
 @alain-default-aside-nav-text-hover-color: #1890ff;
 @alain-default-aside-nav-selected-text-color: #1890ff;
-// @masonry-enabled: false;
-// @setting-drawer-enabled: false;
+@masonry-enabled: false;
+@setting-drawer-enabled: false;
 
 // @primary-color: #1890ff;
 // @alain-default-header-hg: 40px;
