--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,56 +1,61 @@
-<div class="alain-default__aside-inner">
-  <!-- <nz-dropdown nzTrigger="click" class="alain-default__aside-user">
-    <div nz-dropdown class="user-block-dropdown">
-      <nz-avatar class="alain-default__aside-user-avatar" [nzSrc]="settings.user.avatar"></nz-avatar>
-      <div class="alain-default__aside-user-info">
-        <strong>{{settings.user.name}}</strong>
-        <p class="text-truncate mb0">{{settings.user.email}}</p>
-      </div>
-    </div>
-    <ul nz-menu>
-      <li nz-menu-item routerLink="/pro/account/center">个人中心</li>
-      <li nz-menu-item routerLink="/pro/account/settings">个人设置</li>
-    </ul>
-  </nz-dropdown>
-  <sidebar-nav class="d-block py-lg"></sidebar-nav> -->
-  <div>
-    <!-- <button nz-button [nzType]="'primary'" (click)="toggleCollapsed()" style="margin-bottom: 10px;">
-      <i nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'"></i>
-    </button> -->
-    <ul nz-menu [nzMode]="'inline'" nzTheme='dark' [nzInlineCollapsed]="isCollapsed">
-      <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? 'Navigation One' : ''">
-        <span title>
-          <i nz-icon type="mail"></i>
-          <span>Navigation One</span>
-        </span>
-      </li>
-      <li nz-submenu>
-        <span title>
-          <i nz-icon type="appstore"></i>
-          <span>Navigation Two</span>
-        </span>
-        <ul>
-          <li nz-menu-item>Option 5</li>
-          <li nz-menu-item>Option 6</li>
-          <li nz-submenu>
-            <span title>Submenu</span>
-            <ul>
-              <li nz-menu-item>Option 7</li>
-              <li nz-menu-item>Option 8</li>
-            </ul>
+<div class="alain-default__aside-inner sidebar-menu">
+  <!--<nz-dropdown nzTrigger="click" class="alain-default__aside-user">-->
+  <!--<div nz-dropdown class="user-block-dropdown">-->
+  <!--<nz-avatar class="alain-default__aside-user-avatar" [nzSrc]="settings.user.avatar"></nz-avatar>-->
+  <!--<div class="alain-default__aside-user-info">-->
+  <!--<strong>{{settings.user.name}}</strong>-->
+  <!--<p class="text-truncate mb0">{{settings.user.email}}</p>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--<ul nz-menu>-->
+  <!--<li nz-menu-item routerLink="/pro/account/center">个人中心</li>-->
+  <!--<li nz-menu-item routerLink="/pro/account/settings">个人设置</li>-->
+  <!--</ul>-->
+  <!--</nz-dropdown>--> 
+  <!--<sidebar-nav class="d-block py-lg"></sidebar-nav>-->
+  <ul class="main-menu">
+    <ng-template ngFor let-item [ngForOf]="userModules" let-i="index">
+      <li *ngIf="item.asAccess" [ngClass]="{'active':(selectedTopModule?.id == item.id)}" class="has-sub">
+        <a (click)="topMenuClick(item)">
+          <i class="{{item.css}}"></i>
+          <span class="ui-text">{{item.name}}</span>
+          <span *ngIf="item?.child.length > 0"
+                [ngClass]="{'fa-angle-right':(selectedTopModule?.id != item.id),'fa-angle-down':(selectedTopModule?.id == item.id)}"
+                class="fa pull-right"></span>
+        </a>
+        <ul [ngClass]="{'submenushow': (selectedTopModule?.id == item.id), 'submenuhide': (selectedTopModule?.id != item.id),'selectedMenu':(item.id == selectedModuleId)}">
+          <li *ngFor="let menuItem of item?.child">
+            <a style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{menuItem.id}}" [class.active-menuitem]="menuItem.id == activeMenuId" (click)="leftMenuClick(menuItem)">
+              <i class="{{menuItem.css}}"></i>
+              <span class="ui-text">{{menuItem.name}}</span>
+              <span *ngIf="menuItem?.child.length > 0"
+                    [ngClass]="{'fa-angle-right':(menuItem.id != activeMenuId),'fa-angle-down':(menuItem.id == activeMenuId)}"
+                    class="fa pull-right"></span>
+            </a>
+            <div [ngClass]="{'submenushow': (menuItem.id == activeMenuId), 'submenuhide': (menuItem.id != activeMenuId), 'selectedMenu':(menuItem.id == selectedModuleId)}">
+              <div *ngFor="let subMenu of menuItem?.child">
+                <a style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{subMenu.id}}" (click)="leftSubMenuClick(subMenu,menuItem.id)"
+                   [ngClass]="{'selectedMenu': (subMenu.id == selectedModuleId)}">
+                  <i class="{{subMenu.css}}"></i>
+                  <span class="ui-text">{{subMenu.name}}</span>
+                  <span *ngIf="subMenu?.child.length > 0" class="fa fa-angle-right pull-right"></span>
+                </a>
+                <div
+                  [ngClass]="{'subthirdmenushow': (subMenu.id == activeMenuId), 'subthirdmenuhide': (subMenu.id != activeMenuId), 'selectedMenu':(subMenu.id == selectedModuleId)}"
+                  *ngFor="let thirdMenu of subMenu?.child">
+                  <a style="overflow:hidden;text-overflow:ellipsis;margin-left: 10%;" id="menu_{{thirdMenu.id}}"
+                     (click)="leftThirdMenuClick(thirdMenu)"
+                     [ngClass]="{'selectedMenu': (thirdMenu.id == selectedModuleId)}">
+                    <i class="{{thirdMenu.css}}"></i>
+                    <span class="ui-text">{{thirdMenu.name}}</span>
+                    <span *ngIf="thirdMenu?.child.length > 0" class="fa fa-angle-right pull-right"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </li>
         </ul>
       </li>
-      <li nz-submenu>
-        <span title>
-          <i nz-icon type="setting"></i>
-          <span>Navigation Three</span>
-        </span>
-        <ul>
-          <li nz-menu-item>Option 9</li>
-          <li nz-menu-item>Option 10</li>
-          <li nz-menu-item>Option 11</li>
-        </ul>
-      </li>
-    </ul>
+    </ng-template>
+  </ul>
 </div>
