--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+@color: #7a7a7a;
+@color-active: #aeafaf;
+@bg-1: #292a2b;
+@bg-2: #141415;
+@content-bg: #222224;
+@border-bottom-color: #535456;
+
+
+.alain-default__header{
+  border-bottom: 1px solid #535456;
+  box-shadow: 0 0 0 0 rgba(0,0,0,0.0);
+}
+
+.alain-default__aside:after{
+  border-right: 0;
+}
+
+body{
+  background: #222224;
+}
+
+.ant-tabs-bar {
+  background: @bg-2;
+  border-bottom: 1px solid @border-bottom-color;
+}
+
+.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
+  text-align: center;
+  margin-right: 0;
+  border-radius: 0;
+  border: 0;
+  border-right: 1px solid transparent;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+  width: 168px;
+  height: 40px;
+  background: transparent;
+  &:hover{
+    color: @color-active;
+  }
+}
+.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active{
+  border-top: 1px solid @border-bottom-color;
+  border-right: 1px solid @border-bottom-color;
+  border-left: 1px solid @border-bottom-color;
+  background: @content-bg;
+  color: @color-active;
+}
