--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -15,51 +15,45 @@
   <!--<sidebar-nav class="d-block py-lg"></sidebar-nav>-->
   <ul class="main-menu">
     <ng-template ngFor let-item [ngForOf]="userModules" let-i="index">
-      <li [ngClass]="{'active':(selectedTopModule?.id == item.id)}" class="has-sub">
+      <li class="has-sub">
         <a (click)="topMenuClick(item)" class="topAlink">
-          <i nz-icon type="menu-fold" theme="outline"></i>
+          <i nz-icon type="menu-fold" theme="outline" style="color:#aeafaf;"></i>
           <span class="ui-text">{{item.name}}</span>
-          <span *ngIf="item?.child && item?.child.length > 0 && (selectedTopModule?.id != item.id)" class="fa pull-right">
+          <span *ngIf="item?.child && item?.child.length > 0 && (selectedTopModule?.id != item.id)">
             <i nz-icon [nzType]="'right'" class="arrowIcon"></i>
           </span>
-          <span *ngIf="item?.child && item?.child.length > 0 && (selectedTopModule?.id == item.id)" class="fa pull-right">
+          <span *ngIf="item?.child && item?.child.length > 0 && (selectedTopModule?.id == item.id)">
             <i nz-icon [nzType]="'down'" class="arrowIcon"></i>
           </span>
         </a>
-        <ul [ngClass]="{'submenushow': (selectedTopModule?.id == item.id), 'submenuhide': (selectedTopModule?.id != item.id),'selectedMenu':(item.id == selectedModuleId)}">
+        <ul [ngClass]="{'submenushow': (selectedTopModule?.id == item.id), 'submenuhide': (selectedTopModule?.id != item.id)}">
           <li *ngFor="let menuItem of item?.child">
-            <a style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{menuItem.id}}" [class.active-menuitem]="menuItem.id == activeMenuId" (click)="leftMenuClick(menuItem)">
+            <a class="subAlink" style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{menuItem.id}}" [class.activeMenuitem]="menuItem.id == activeMenuId && !menuItem?.child" (click)="leftMenuClick(menuItem)">
               <i [ngClass]="{'greenState': (menuItem.state == 1), 'yellowState': (menuItem.state == 2), 'redState': (menuItem.state == 3), 'secondStateHide': menuItem?.child && menuItem?.child.length > 0 && (menuItem.id == activeMenuId)}"></i>
-              <span *ngIf="menuItem?.child && menuItem?.child.length > 0 && (menuItem.id != activeMenuId)" class="fa pull-right">
+              <span *ngIf="menuItem?.child && menuItem?.child.length > 0 && (menuItem.id != activeMenuId)" class="subIcon">
                 <i nz-icon [nzType]="'right'" class="arrowIcon"></i>
               </span>
-              <span *ngIf="menuItem?.child && menuItem?.child.length > 0 && (menuItem.id == activeMenuId)" class="fa pull-right">
+              <span *ngIf="menuItem?.child && menuItem?.child.length > 0 && (menuItem.id == activeMenuId)" class="subIcon">
                 <i nz-icon [nzType]="'down'" class="arrowIcon"></i>
               </span>
               <span class="ui-text">{{menuItem.name}}</span>
             </a>
-            <div [ngClass]="{'submenushow': (menuItem.id == activeMenuId), 'submenuhide': (menuItem.id != activeMenuId), 'selectedMenu':(menuItem.id == selectedModuleId)}">
+            <div [ngClass]="{'submenushow': (menuItem.id == activeMenuId), 'submenuhide': (menuItem.id != activeMenuId)}">
               <div *ngFor="let subMenu of menuItem?.child">
-                <a style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{subMenu.id}}" (click)="leftSubMenuClick(subMenu,menuItem.id)"
-                   [ngClass]="{'selectedMenu': (subMenu.id == selectedModuleId)}">
+                <a class="thirdAlink" style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{subMenu.id}}" [class.activeMenuitem]="subMenu.id == activeSubMenuId && !subMenu?.child" (click)="leftSubMenuClick(subMenu,menuItem.id)">
                   <i [ngClass]="{'greenState': (menuItem.state == 1), 'yellowState': (menuItem.state == 2), 'redState': (menuItem.state == 3)}"></i>
-                  <span class="ui-text">{{subMenu.name}}</span>
-                  <span *ngIf="subMenu?.child && subMenu?.child.length > 0 && (subMenu.id != activeMenuId)" class="fa pull-right">
+                  <span *ngIf="subMenu?.child && subMenu?.child.length > 0 && (subMenu.id != activeMenuId)" class="thirdIcon">
                     <i nz-icon [nzType]="'right'" class="arrowIcon"></i>
                   </span>
-                      <span *ngIf="subMenu?.child && subMenu?.child.length > 0 && (subMenu.id == activeMenuId)" class="fa pull-right">
+                  <span *ngIf="subMenu?.child && subMenu?.child.length > 0 && (subMenu.id == activeMenuId)" class="thirdIcon">
                     <i nz-icon [nzType]="'down'" class="arrowIcon"></i>
                   </span>
+                  <span class="ui-text">{{subMenu.name}}</span>
                 </a>
-                <div
-                  [ngClass]="{'subthirdmenushow': (subMenu.id == activeMenuId), 'subthirdmenuhide': (subMenu.id != activeMenuId), 'selectedMenu':(subMenu.id == selectedModuleId)}"
-                  *ngFor="let thirdMenu of subMenu?.child">
-                  <a style="overflow:hidden;text-overflow:ellipsis;margin-left: 10%;" id="menu_{{thirdMenu.id}}"
-                     (click)="leftThirdMenuClick(thirdMenu)"
-                     [ngClass]="{'selectedMenu': (thirdMenu.id == selectedModuleId)}">
+                <div [ngClass]="{'subthirdmenushow': (subMenu.id == activeSubMenuId), 'subthirdmenuhide': (subMenu.id != activeSubMenuId)}" *ngFor="let thirdMenu of subMenu?.child">
+                  <a class="fourAlink" style="overflow:hidden;text-overflow:ellipsis;margin-left: 10%;" id="menu_{{thirdMenu.id}}" (click)="leftThirdMenuClick(thirdMenu)">
                     <i [ngClass]="{'greenState': (thirdMenu.state == 1), 'yellowState': (thirdMenu.state == 2), 'redState': (thirdMenu.state == 3)}"></i>
                     <span class="ui-text">{{thirdMenu.name}}</span>
-                    <span *ngIf="thirdMenu?.child && thirdMenu?.child.length > 0" class="fa fa-angle-right pull-right"></span>
                   </a>
                 </div>
               </div>
