--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -9,7 +9,7 @@
       <!-- <div class="desc"></div> -->
     </div>
     <router-outlet></router-outlet>
-    <global-footer [links]="links">
+    <global-footer>
       Copyright <i class="anticon anticon-copyright"></i> footer info
     </global-footer>
   </div>
