--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,15 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@color: #7a7a7a;
-@color-active: #aeafaf;
-@bg-1: #292a2b;
-@bg-2: #141415;
-@content-bg: #222224;
-@border-bottom-color: #535456;
+@import './global.less';
 
+ul{
+  padding: 0;
+  list-style: none;
+}
 
+.alain-default__content-title{
+  margin-bottom: 0;
+}
 .alain-default__header{
   border-bottom: 1px solid #535456;
   box-shadow: 0 0 0 0 rgba(0,0,0,0.0);
+  background: url(../assets/bg_03.png) repeat;
+}
+.alain-default__aside{
+  background: url(../assets/bg_03.png) repeat;
 }
 
 .alain-default__aside:after{
@@ -23,6 +29,7 @@ body{
 .ant-tabs-bar {
   background: @bg-2;
   border-bottom: 1px solid @border-bottom-color;
+  margin: 0;
 }
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
@@ -46,4 +53,5 @@ body{
   border-left: 1px solid @border-bottom-color;
   background: @content-bg;
   color: @color-active;
+
 }
