--- a/src/app/layout/default/default.component.html
+++ b/src/app/layout/default/default.component.html
@@ -4,4 +4,4 @@
 <section class="alain-default__content">
   <router-outlet></router-outlet>
 </section>
-<ng-template #settingHost></ng-template>
+<!-- <ng-template #settingHost></ng-template> -->
