--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -55,3 +55,24 @@ body{
   color: @color-active;
 
 }
+
+.alain-default__nav-wrap {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.alain-default__nav-wrap .navList{
+  display:flex;
+  flex-direction: row-reverse;
+}
+
+.alain-default__nav-wrap .navList li{
+  padding: 0 13px;
+  font-size:14px;
+  color:#aeafaf;
+  border-left:1px solid #6b6b6b;
+}
+.alain-default__nav-wrap .navList li span,.alain-default__nav-wrap .navList li i{
+  padding:0 2px;
+}
