--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
 
               </div>
               <div class="">
-                <ul>
+                <ul style="display:flex;">
                   <li *ngFor="let item of list">
                     <div class="bar-box">
                       <h4>{{item.name}}</h4>
@@ -21,12 +21,12 @@
                         <span class="bar-status bar-status-normal-bg bar-status-normal"></span>
                         <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
                         <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                        <div class="bar-analog-icon"></div>
+                        <div class="bar-analog-icon" [ngStyle]="fnReturnState(item.analog).style"></div>
                         <div class="bar-mark bar-mark-danger">0.8</div>
                         <div class="bar-mark bar-mark-warn">24.3</div>
                         <div class="bar-mark bar-mark-normal">57.2</div>
                         <div class="bar-mark bar-mark-error">80.8</div>
-                        <div class="bar-analog-value bar-status-warn-color">{{item.analog}}</div>
+                        <div class="bar-analog-value bar-status-{{fnReturnState(item.analog).state}}-color" [ngStyle]="fnReturnState(item.analog).style">{{item.analog}}</div>
                       </div>
                     </div>
                   </li>
