header导航下拉按钮大小优化

--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -9,11 +9,11 @@
   <ul class="alain-default__nav navList">
     <li>
       <span>中文</span>
-      <i nz-icon type="down" theme="outline"></i>
+      <i nz-icon type="down" theme="outline" style="font-size:12px;"></i>
     </li>
     <li>
       <span>报告</span>
-      <i nz-icon type="down" theme="outline"></i>
+      <i nz-icon type="down" theme="outline" style="font-size:12px;"></i>
     </li>
     <li>
       <span>消息中心</span>
