--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -71,11 +71,14 @@ body {
 
 .bar-box {
   width: 120px;
-  height: 200px;
+  height: 240px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  &.active{
+    background: #0e0e0f;
+  }
   h4{
     color: @color;
     font-size: 14px;
