--- a/src/assets/alain-default.less
+++ b/src/assets/alain-default.less
@@ -23362,6 +23362,28 @@ body{
   color: @color-active;
 
 }
+
+.alain-default__nav-wrap {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.alain-default__nav-wrap .navList{
+  display:flex;
+  flex-direction: row-reverse;
+}
+
+.alain-default__nav-wrap .navList li{
+  padding: 0 13px;
+  font-size:14px;
+  color:#aeafaf;
+  border-left:1px solid #6b6b6b;
+}
+.alain-default__nav-wrap .navList li span,.alain-default__nav-wrap .navList li i{
+  padding:0 2px;
+}
+
 // 可以通过 https://ng-alain.github.io/ng-alain/ 获取主题参数代码
 // The theme paraments can be generated at https://ng-alain.github.io/ng-alain/
 @primary-color: #1890ff;
