--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -137,7 +137,7 @@
           </div>
         </nz-tab>
         <nz-tab nzTitle="趋势分析">
-          趋势分析 pages
+          <app-bar [item]='item'></app-bar>
         </nz-tab>
         <nz-tab nzTitle="衰退分析">
           衰退分析 pages
